--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; url=youthelinktargethere" />
-<p><a href="youthelinktargethere"> domainnamehere </a></p>
+<meta http-equiv="refresh" content="0; url=https://www.new88ww.com/?uagt=newc04p02&path=signup" />
+<p><a href="https://www.new88ww.com/?uagt=newc04p02&path=signup"> trumkeobong.com </a></p>
