--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; url=https://www.new88ww.com/?uagt=newc04p02&path=signup" />
-<p><a href="https://www.new88ww.com/?uagt=newc04p02&path=signup"> trumkeobong.com </a></p>
+<meta http-equiv="refresh" content="0; url=https://www.new8808.vip/?uagt=newc04m02&path=signup" />
+<p>trumkeobong.com</p>
